--- a/calc.html
+++ b/calc.html
@@ -11,29 +11,31 @@
 <body>
     <div class="grid-calc">
         <div class="salidas">
-            <div class="operacion-anterior">
-                <div class="operacion-actual">
+            <div data-anterior class="operacion-anterior">
+                <div data-actual class="operacion-actual">
                 </div>
             </div>
         </div>
-        <button class="span-2">AC</button>
-        <button >DEL</button>
-        <button >÷</button>
-        <button >1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>*</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>+</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>-</button>
-        <button>.</button>
-        <button>0</button>
-        <button class="span-2">=</button>
+        <button data-borrar-todo class="span-2">AC</button>
+        <button data-borrar>DEL</button>
+        <!-- js usa data atributes en lugar de clases, it is important 
+            not to mixed them con las clases de CSS-->
+        <button data-operacion>÷</button>
+        <button data-numero>1</button>
+        <button data-numero>2</button>
+        <button data-numero>3</button>
+        <button data-operacion>*</button>
+        <button data-numero>4</button>
+        <button data-numero>5</button>
+        <button data-numero>6</button>
+        <button data-operacion>+</button>
+        <button data-numero>7</button>
+        <button data-numero>8</button>
+        <button data-numero>9</button>
+        <button data-operacion>-</button>
+        <button data-numero>.</button> 
+        <button data-numero>0</button>
+        <button data-igual class="span-2">=</button>
     </div>
 </body>
 </html>
