Query Selectors de los botones y creacion de clase para los numeros de salida en JS

--- a/calc.html
+++ b/calc.html
@@ -19,7 +19,8 @@
         <button data-borrar-todo class="span-2">AC</button>
         <button data-borrar>DEL</button>
         <!-- js usa data atributes en lugar de clases, it is important 
-            not to mixed them con las clases de CSS-->
+            not to mixed them con las clases de CSS. También se pueden enlazar clases de
+            CSS CON JS pero en este caso se hara con atributos js-->
         <button data-operacion>÷</button>
         <button data-numero>1</button>
         <button data-numero>2</button>
