Funcion añadirNumero (append) e inicio de función elegir operacion

--- a/calc.html
+++ b/calc.html
@@ -11,10 +11,8 @@
 <body>
     <div class="grid-calc">
         <div class="salidas">
-            <div data-anterior class="operacion-anterior">
-                <div data-actual class="operacion-actual">
-                </div>
-            </div>
+            <div data-anterior class="operacion-anterior"></div>
+                <div data-actual class="operacion-actual"></div>
         </div>
         <button data-borrar-todo class="span-2">AC</button>
         <button data-borrar>DEL</button>
